# exchange-rs

./: .editorconfig  Cargo.toml  README.md  orders.example.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: cargo.yml  test.yml
exchange/: Cargo.toml
exchange-algo/: Cargo.toml
exchange-algo/src/: lib.rs
exchange-algo/src/default/: mod.rs
exchange-algo/src/default/policy/: fill_or_kill.rs  post_only.rs
exchange-algo/src/standard/: mod.rs  orderbook.rs
exchange-algo/src/standard/index/: orders_by_id.rs  orders_by_price.rs
exchange-algo/src/standard/orderbook/: mod.rs
exchange-algo/src/standard/orderbook/index/: mod.rs  orders_by_id.rs  orders_by_price.rs  orders_by_side.rs
exchange-algo/src/standard/policy/: fill_or_kill.rs  immediate_or_cancel.rs  mod.rs  post_only.rs
exchange-core/: Cargo.toml
exchange-core/src/: algo.rs  asset.rs  engine.rs  exchange.rs  lib.rs  policy.rs
exchange-rt/: Cargo.toml
exchange-rt/src/: lib.rs  request.rs  runtime.rs
exchange-rt/src/executor/: mod.rs  tokio.rs
exchange-types/: Cargo.toml
exchange-types/src/: amount.rs  error.rs  id.rs  kind.rs  lib.rs  order.rs  order_id.rs  order_request.rs  order_side.rs  order_type.rs  orderbook.rs  request.rs  side.rs  status.rs  trade.rs
exchange-types/src/order/: limit.rs
exchange/benches/: in_memory.rs
exchange/src/: main.rs
exchange/tests/: all_or_none.rs  fill_or_kill.rs  integration_test.rs  mock_orders.json  mod.rs
exchange/tests/snapshots/: fill_or_kill__invalid__amount_mismatch.snap
matching-engine/matching-engine/: Cargo.toml
matching-engine/matching-engine-algo/: Cargo.toml
matching-engine/matching-engine-algo/src/: lib.rs  orderbook.rs
matching-engine/matching-engine-algo/src/orderbook/index/: orders_by_id.rs  orders_by_price.rs  orders_by_side.rs
matching-engine/matching-engine-algo/src/policy/: fill_or_kill.rs  immediate_or_cancel.rs  mod.rs  post_only.rs
matching-engine/matching-engine-rt/: Cargo.toml
matching-engine/matching-engine-rt/src/: lib.rs
matching-engine/matching-engine/benches/: in_memory.rs
matching-engine/matching-engine/src/: main.rs
matching-engine/matching-engine/tests/: fill_or_kill.rs  integration_test.rs  mock_orders.json
matching-engine/matching-engine/tests/snapshots/: fill_or_kill__invalid__price_mismatch.snap  fill_or_kill__valid__same_prices__triple_match.snap
orderbook/: Cargo.toml
orderbook-algo/: Cargo.toml
orderbook-algo/src/: lib.rs
orderbook-core/: Cargo.toml
orderbook-core/src/: asset.rs  exchange.rs  internals.rs  lib.rs  order_side.rs
orderbook-rt/: Cargo.toml
orderbook-rt/src/: lib.rs
orderbook-types/: Cargo.toml
orderbook-types/src/: lib.rs  order.rs  order_request.rs  order_status.rs  order_type.rs  orderbook.rs  trade.rs
orderbook/benches/: in_memory.rs
orderbook/src/: lib.rs  main.rs
orderbook/src/engine/: engine.rs  event.rs  mod.rs  order.rs  order_id.rs  order_request.rs  order_type.rs  orderbook.rs  trade.rs
orderbook/src/tests/: integration_test.rs  mock_orders.json
orderbook/tests/: all_or_none.rs  integration_test.rs
src/engine/: order.rs  order_request.rs  trade.rs
src/tests/: integration_test.rs
