[workspace]
resolver = "2"

members = ["exchange-core", "exchange-types", "matching-engine/*"]

[workspace.dependencies]
anyhow = "1.0"
arrayvec = "0.7"
assert2 = "0.3.14"
clap = "4.5"
compact_str = "0.7"
criterion = "0.5"
crossbeam = "0.8"
either = "1.9"
insta = "1.34"
mimalloc = { version = "0.1", default-features = false }
num = "0.4"
num_cpus = "1.16"
once_cell = "1.18"
owo-colors = "3.5"
rand = "0.8"
rust_decimal = "1.31"
rust_decimal_macros = "1.33"
serde = "1.0"
serde_json = "1.0"
tap = "1.0"
thiserror = "1.0"
uuid = "1.5"

[profile.release]
strip = true

[profile.bench]
debug = true
strip = false
