[package]
name = "exchange-algo"
version = "0.1.0"
edition = "2021"

[features]
test = []

[dependencies]
exchange-core = { path = "../exchange-core" }
exchange-types = { path = "../exchange-types" }

either = "1.9.0"
num = "0.4.1"
thiserror = "~1.0"

[dev-dependencies]
exchange-types = { path = "../exchange-types", features = ["test"] }
