[package]
name = "exchange-algo"
version = "0.1.0"
edition = "2021"

[features]
test = []

[dependencies]
exchange-core = { path = "../exchange-core" }
exchange-types = { path = "../exchange-types" }

either = "1.9.0"
heapless = "0.7.16"
itertools = "0.12.0"
num = "0.4.1"
postcard = { version = "1.0.8", features = ["heapless"] }
sled = "0.34.7"
serde = "1.0.193"
tap = "1.0.1"
thiserror = "~1.0"

[dev-dependencies]
exchange-types = { path = "../exchange-types", features = ["test"] }
