[package]
name = "exchange-rt"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "exchange-types/serde"]

[dependencies]
exchange-algo = { path = "../exchange-algo" }
exchange-core = { path = "../exchange-core" }
exchange-types = { path = "../exchange-types" }

compact_str = { version = "0.7.0", features = ["serde"] }
flume = "0.11.0"
futures = "0.3.29"
rust_decimal = "1.29.1"
serde = { version = "~1.0", features = ["derive"], optional = true }
thiserror = "~1.0"
tokio = { version = "1.34.0", features = ["rt"] }

[dev-dependencies]
serde_json = "~1.0"
