[package]
name = "exchange-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
exchange-core = { path = "../exchange-core" }

compact_str = "0.7.1"
num = "0.4.1"
rust_decimal = "1.31.0"
serde = { version = "~1.0", features = ["derive"], optional = true }
thiserror = "~1.0"
