[package]
name = "exchange-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde", "compact_str/serde", "uuid/serde"]
test = ["uuid/v4"]

[dependencies]
exchange-core = { path = "../exchange-core" }

compact_str = { workspace = true }
either = { workspace = true }
num = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
