[package]
name = "exchange"
version = "0.2.0"
edition = "2021"
default-run = "exchange"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
exchange-algo = { path = "../exchange-algo" }
exchange-core = { path = "../exchange-core" }
exchange-rt = { path = "../exchange-rt" }
exchange-types = { path = "../exchange-types" }

anyhow = "~1.0"
clap = { version = "3.2.23", features = ["clap_derive", "derive"] }
compact_str = { version = "0.7.1", features = ["serde"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
owo-colors = "3.5.0"
rand = "0.8.5"
rayon = "1.8.0"
rust_decimal = "1.31.0"
serde = { version = "~1.0", features = ["derive"], optional = true }
serde_json = { version = "~1.0", optional = true }
thiserror = "~1.0"
uuid = { version = "1.5.0", features = ["rand", "v4"] }

[dev-dependencies]
exchange-algo = { path = "../exchange-algo", features = ["test"] }

criterion = "0.5.1"
insta = "1.34.0"
once_cell = "~1.18"
tap = "1.0.1"

[[bin]]
name = "generator"
required-features = ["serde"]

[[bench]]
name = "in_memory"
harness = false
