[package]
name = "exchange"
version = "0.2.0"
edition = "2021"
default-run = "exchange"

[features]
default = ["rand", "serde"]
rand = ["dep:rand", "exchange-types/rand"]
serde = [
    "dep:serde",
    "dep:serde_json",
    "exchange-rt/serde",
    "exchange-types/serde",
]

[dependencies]
exchange-algo = { path = "../exchange-algo" }
exchange-core = { path = "../exchange-core" }
exchange-rt = { path = "../exchange-rt" }
exchange-types = { path = "../exchange-types" }

anyhow = "~1.0"
clap = { version = "3.2.23", features = ["clap_derive", "derive"] }
compact_str = { version = "0.7.1", features = ["serde"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
either = "1.9.0"
flume = "0.11.0"
futures = "0.3.29"
mimalloc = { version = "0.1.39", default-features = false }
owo-colors = "3.5.0"
rand = { version = "0.8.5", optional = true }
rayon = "1.8.0"
rust_decimal = "1.31.0"
serde = { version = "~1.0", features = ["derive"], optional = true }
serde_json = { version = "~1.0", optional = true }
tap = "1.0.1"
thiserror = "~1.0"
uuid = { version = "1.5.0", features = ["rand", "v4"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
exchange-algo = { path = "../exchange-algo", features = ["test"] }
exchange-types = { path = "../exchange-types", features = ["test"] }

criterion = "0.5.1"
insta = "1.34.0"
once_cell = "~1.18"
rust_decimal_macros = "1.33.1"
tap = "1.0.1"

[[bin]]
name = "generator"
required-features = ["rand", "serde"]

[[bench]]
name = "in_memory"
harness = false
