[package]
name = "orderbook-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
orderbook-algo = { path = "../orderbook-algo" }
orderbook-core = { path = "../orderbook-core" }
orderbook-types = { path = "../orderbook-types" }

compact_str = { version = "0.7.0", features = ["serde"] }
rust_decimal = "1.29.1"
serde = { version = "~1.0", features = ["derive"], optional = true }
serde_json = { version = "~1.0", optional = true }
thiserror = "~1.0"
