[package]
name = "orderbook"
version = "0.2.0"
edition = "2021"
default-run = "orderbook"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
orderbook-algo = { path = "../orderbook-algo" }
orderbook-core = { path = "../orderbook-core" }

clap = { version = "3.2.23", features = ["clap_derive", "derive"] }
compact_str = { version = "0.7.0", features = ["serde"] }
indexmap = "1.9.3"
rand = "0.8.5"
rust_decimal = "1.29.1"
serde = { version = "~1.0", features = ["derive"], optional = true }
serde_json = { version = "~1.0", optional = true }
thiserror = "1.0.40"

[dev-dependencies]
once_cell = "~1.17"

[[bin]]
name = "generator"
required-features = ["serde"]
