[package]
name = "orderbook"
version = "0.2.0"
edition = "2021"
default-run = "orderbook"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
orderbook-algo = { path = "../orderbook-algo" }
orderbook-core = { path = "../orderbook-core" }
orderbook-rt = { path = "../orderbook-rt" }
orderbook-types = { path = "../orderbook-types" }

clap = { version = "3.2.23", features = ["clap_derive", "derive"] }
compact_str = { version = "0.7.1", features = ["serde"] }
rand = "0.8.5"
rust_decimal = "1.31.0"
serde = { version = "~1.0", features = ["derive"], optional = true }
serde_json = { version = "~1.0", optional = true }
thiserror = "~1.0"

[dev-dependencies]
once_cell = "~1.18"

[[bin]]
name = "generator"
required-features = ["serde"]
