[package]
name = "matching-engine-algo"
version = "0.1.0"
edition = "2021"

[features]
test = []

[dependencies]
exchange-core = { path = "../../exchange-core" }
exchange-types = { path = "../../exchange-types" }

either = { workspace = true }
num = { workspace = true }
slab = "0.4.9"
thiserror = { workspace = true }

[dev-dependencies]
exchange-types = { path = "../../exchange-types", features = ["test"] }
