[package]
name = "matching-engine-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
exchange-core = { path = "../../exchange-core" }
exchange-types = { path = "../../exchange-types" }
matching-engine-algo = { path = "../matching-engine-algo" }

compact_str = { version = "0.7.0", features = ["serde"] }
rust_decimal = "1.29.1"
serde = { version = "~1.0", features = ["derive"], optional = true }
serde_json = { version = "~1.0", optional = true }
thiserror = "~1.0"
