[package]
name = "matching-engine"
version = "0.2.0"
edition = "2021"
default-run = "matching-engine"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
exchange-core = { path = "../../exchange-core" }
exchange-types = { path = "../../exchange-types" }

matching-engine-algo = { path = "../matching-engine-algo" }
matching-engine-rt = { path = "../matching-engine-rt" }

anyhow = { workspace = true }
arrayvec = { workspace = true }
clap = { workspace = true, features = ["clap_derive", "derive"] }
compact_str = { workspace = true, features = ["serde"] }
crossbeam = { workspace = true, features = ["crossbeam-channel"] }
mimalloc = { workspace = true }
num_cpus = { workspace = true }
owo-colors = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["rand", "v4"] }

[dev-dependencies]
matching-engine-algo = { path = "../matching-engine-algo", features = ["test"] }

criterion = { workspace = true }
insta = { workspace = true }
once_cell = { workspace = true }
rust_decimal_macros = { workspace = true }
tap = { workspace = true }

[[bin]]
name = "generator"
required-features = ["serde"]

# [[bench]]
# name = "in_memory"
# harness = false
