[package]
name = "matching-engine"
version = "0.2.0"
edition = "2021"
default-run = "matching-engine"

[dependencies]
exchange-core = { path = "../../exchange-core", features = ["serde"] }
exchange-types = { path = "../../exchange-types", features = ["serde"] }

matching-engine-algo = { path = "../matching-engine-algo" }
matching-engine-rt = { path = "../matching-engine-rt" }

anyhow = { workspace = true }
arrayvec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
compact_str = { workspace = true, features = ["serde"] }
crossbeam-channel = "0.5.13"
memchr = "2.7.4"
mimalloc = { workspace = true }
num_cpus = { workspace = true }
owo-colors = { workspace = true }
parking_lot = "0.12.3"
rand = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["fast-rng", "v4"] }

[dev-dependencies]
matching-engine-algo = { path = "../matching-engine-algo", features = ["test"] }

assert2 = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true, features = ["redactions", "ron"] }
once_cell = { workspace = true }
rust_decimal_macros = { workspace = true }
tap = { workspace = true }

[[bin]]
name = "generator"

# [[bench]]
# name = "in_memory"
# harness = false
